# llm-system

./: .gitignore  Dockerfile  OPTIONAL_FOLLOWUP_FEATURE.md  QUICK_START.md  README.md  README_BACKEND.md  install_frontend.sh  log.txt  pyproject.toml  save_to_ecr.sh  startup.sh  test_clarifying_questions.py  test_conversation_creation.py  test_important_questions.py  test_improved_clarification.py  test_improvements.py  test_real_case_important.py  test_startup.sh
llm-client/: .gitignore  Dockerfile  Dockerfile-old  RAG_COMPARISON_UI.md  README.md  README_FRONTEND.md  index.html  package-lock.json  package.json  save_to_ecr.sh  tailwind.config.cjs  vite.config.ts  vite.config.ts.timestamp-1757654100021.mjs
llm-client/src/: App.tsx  (+4 more)
llm-server/: .env.example  API_DOCUMENTATION.md  GOOGLE_AUTH_SETUP.md  GPT5_USAGE.md  MODEL_CONFIG.md  RAG_SETUP.md  README.md  README_IMPROVEMENTS.md  copy_chatbot_scripts  log.txt  requirements.txt  startup.sh  test_comparison_mode.py  test_complete_case.py  test_llm_fact_extraction.py  test_optional_followup.py  test_sentencing_questions.py  test_unified_prediction.py  test_user_case.py
src/: chat.py  predict_crime_type.py
tests/: test_api.py
罪名予測テーブル/: 罪名予測テーブル - 偽造に対する罪.tsv  罪名予測テーブル - 公共の安全に対する罪.tsv  罪名予測テーブル - 居住に対する罪.tsv  罪名予測テーブル - 性に対する罪.tsv  罪名予測テーブル - 自由に対する罪.tsv  罪名予測テーブル - 薬物犯罪.tsv  罪名予測テーブル - 軽犯罪法.tsv
量刑予測ヒアリングシート/: 量刑予測_ヒアリングシート - 交通に対する罪.tsv  量刑予測_ヒアリングシート - 偽造に対する罪.tsv  量刑予測_ヒアリングシート - 公共の安全に対する罪.tsv  量刑予測_ヒアリングシート - 名誉に対する罪.tsv  量刑予測_ヒアリングシート - 国家の作用に対する罪.tsv  量刑予測_ヒアリングシート - 性に対する罪.tsv  量刑予測_ヒアリングシート - 自由に対する罪.tsv  (+2 more)
(+63 files in other folders)
